Update print statement from 'Hello' to 'Goodbye'

--- a/Juego/juego.html
+++ b/Juego/juego.html
@@ -562,8 +562,8 @@
                 enemigo.anguloEspada += 15;
                 ctx.rotate((enemigo.anguloEspada * Math.PI) / 180);
             }
-            ctx.fillStyle = '#C0C0C0';
-            ctx.fillRect(-70, -3, 50, 6);
+            ctx.fillStyle = '#000F00';
+            ctx.fillRect(-80, -3, 60, 6);
             ctx.fillStyle = '#8B4513';
             ctx.fillRect(-23, -5, 8, 10);
             ctx.restore();
