--- a/Juego/juego.html
+++ b/Juego/juego.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Combate con Espadas - Arena Larga</title>
+    <title>Combate con Espadas</title>
     <style>
         * {
             margin: 0;
@@ -703,3 +703,4 @@
     </script>
 </body>
 </html>
+
